--- a/app/src/main/res/layout/activity_food_dashboard.xml
+++ b/app/src/main/res/layout/activity_food_dashboard.xml
@@ -19,8 +19,9 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
 
-    <ListView
+    <GridView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/foodlist" />
+        android:id="@+id/fruitlist" />
+
 </LinearLayout>
