--- a/app/src/main/res/layout/fruit_row_layout.xml
+++ b/app/src/main/res/layout/fruit_row_layout.xml
@@ -23,4 +23,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView9" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView10" />
 </LinearLayout>
