--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -103,5 +103,11 @@
         android:layout_height="wrap_content"
         android:id="@+id/button" />
 
+    <Button
+        android:text="Clear"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/button8" />
+
 
 </LinearLayout>
