--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1"
@@ -14,94 +16,61 @@
         android:textStyle="normal|bold"
         android:textAlignment="center"
         android:textSize="24sp" />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <TextView
-            android:text="Email:"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView3"
-            android:layout_width="150dp"
-            android:fontFamily="serif"
-            android:textColor="@color/colorPrimaryDark"
-            android:textStyle="normal|bold" />
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/editText"
-            android:hint="...." />
-    </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-    <TextView
-        android:text="Username:"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView4"
-        android:layout_width="150dp"
-        android:fontFamily="serif"
-        android:textColor="@color/colorPrimaryDark"
-        android:textStyle="normal|bold" />
-        <EditText
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/text_input_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
+            app:errorEnabled="true">
+            <android.support.design.widget.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/editText"
+                android:inputType="textEmailAddress"
+                android:hint="Email Address"/>
+        </android.support.design.widget.TextInputLayout>
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/text_input_layout2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:errorEnabled="true">
+        <android.support.design.widget.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:id="@+id/editText2"
-            android:hint="...." />
-
-    </LinearLayout>
-    <LinearLayout
+            android:inputType="textPersonName"
+            android:hint="Username"/>
+    </android.support.design.widget.TextInputLayout>
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/text_input_layout3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-    <TextView
-        android:text="Password:"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView5"
-        android:layout_width="150dp"
-        android:fontFamily="serif"
-        android:textColor="@color/colorPrimaryDark"
-        android:textStyle="normal|bold" />
-        <EditText
+        app:errorEnabled="true">
+        <android.support.design.widget.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
             android:id="@+id/editText3"
-            android:hint="...."
-            android:inputType="textPassword" />
-    </LinearLayout>
-    <LinearLayout
+            android:inputType="textPassword"
+            android:hint="Password"/>
+    </android.support.design.widget.TextInputLayout>
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/text_input_layout4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <TextView
-            android:text="Confirm Password:"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView6"
-            android:layout_width="150dp"
-            android:fontFamily="serif"
-            android:textColor="@color/colorPrimaryDark"
-            android:textStyle="normal|bold" />
-        <EditText
+        app:errorEnabled="true">
+        <android.support.design.widget.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
             android:id="@+id/editText4"
-            android:hint="...."
-            android:inputType="textPassword" />
-    </LinearLayout>
-
+            android:inputType="textEmailAddress"
+            android:hint="Confirm Password"/>
+    </android.support.design.widget.TextInputLayout>
     <Button
         android:text="Register here"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/button" />
+        android:id="@+id/button"
+        android:enabled="false"/>
 
     <Button
         android:text="Clear"
