--- a/app/src/main/res/layout/signin.xml
+++ b/app/src/main/res/layout/signin.xml
@@ -1,66 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="100dp">
+    android:layout_marginTop="50dp"
+    android:background="@color/colorPrimary">
 
-    <TextView
-        android:text="Welcome to Fruit App"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView"
-        android:textStyle="normal|bold"
-        android:textAllCaps="false"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="24sp"
-        android:textAlignment="center" />
+
+    <ImageView
+        android:layout_width="700dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center"
+        app:srcCompat="@drawable/logo"
+        android:id="@+id/imageView4" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <TextView
-            android:text="Username:"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView4"
-            android:layout_width="150dp"
-            android:fontFamily="serif"
-            android:textColor="@color/colorPrimaryDark"
-            android:textStyle="normal|bold" />
+
+
         <EditText
+            android:inputType="textPersonName"
+            android:id="@+id/editText2"
+            android:hint="Username"
+            android:ems="10"
+            android:background="@drawable/rounded_corner"
+            android:padding="15dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/editText2"
-            android:hint="...." />
+            android:layout_margin="15dp"
+            />
 
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <TextView
-            android:text="Password:"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView5"
-            android:layout_width="150dp"
-            android:fontFamily="serif"
-            android:textColor="@color/colorPrimaryDark"
-            android:textStyle="normal|bold" />
+
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/rounded_corner"
+            android:padding="15dp"
+            android:layout_margin="15dp"
             android:ems="10"
             android:id="@+id/editText3"
-            android:hint="...."
+            android:hint="Password"
             android:inputType="textPassword" />
     </LinearLayout>
 
     <Button
         android:text="Sign In"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/button2" />
+        android:layout_gravity="center"
+        android:layout_width="350dp"
+        android:layout_height="70dp"
+        android:textColor="#FFCF9043"
+        android:textSize="15dp"
+        android:padding="1dp"
+        android:id="@+id/button2"
+        android:background="@android:color/background_light" />
 
 </LinearLayout>
