--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -5,17 +5,14 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1"
-    android:layout_marginTop="100dp">
+    android:layout_marginTop="50dp">
 
-    <TextView
-        android:text="Register to Fruit APP:"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:fontFamily="serif"
-        android:textColor="@color/colorPrimaryDark"
-        android:textStyle="normal|bold"
-        android:textAlignment="center"
-        android:textSize="24sp" />
+    <ImageView
+        android:layout_width="700dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center"
+        app:srcCompat="@drawable/logo"
+        android:id="@+id/imageView4" />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/text_input_layout"
