--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -5,9 +5,11 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1"
-    android:layout_marginTop="100dp">
+    android:layout_marginTop="100dp"
+    android:id="@+id/registerpage">
 
     <TextView
+        android:id="@+id/titlepage"
         android:text="Register to Fruit APP:"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
