--- a/app/src/main/res/layout/activity_add_food.xml
+++ b/app/src/main/res/layout/activity_add_food.xml
@@ -11,57 +11,80 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     tools:context="com.example.asus.firstsimpleapp.AddFood"
+    android:background="@color/colorPrimary"
     android:weightSum="1">
 
     <TextView
         android:text="Food Name:"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/textView2" />
+        android:id="@+id/textView2"
+        android:textStyle="bold"
+        android:textSize="15dp"/>
 
     <EditText
+        android:ems="10"
+        android:background="@drawable/rounded_corner"
+        android:padding="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
         android:inputType="textPersonName"
-        android:ems="10"
-        android:id="@+id/editText5"
-        android:hint="Name" />
+        android:id="@+id/editText5"/>
 
     <TextView
         android:text="Food Image:"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/textView7" />
+        android:id="@+id/textView7"
+        android:textStyle="bold"
+        android:textSize="15dp"/>
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         app:srcCompat="@mipmap/ic_launcher"
         android:id="@+id/imageView"
-        android:layout_weight="0.85" />
+        android:layout_weight="0.85"
+        android:layout_gravity="center"/>
 
     <Button
         android:text="Browse"
+        android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/button4"
-        android:textAlignment="center" />
+        android:layout_margin="15dp"
+        android:padding="15dp"
+        android:textColor="#FFCF9043"
+        android:background="@android:color/background_light"/>
 
     <EditText
-        android:text="Enter Description Here...."
-        android:layout_width="match_parent"
-        android:layout_height="162dp"
+        android:hint="Enter Description Here"
+        android:layout_width="300dp"
+        android:layout_gravity="center"
+        android:layout_height="50dp"
         android:id="@+id/editText6" />
 
     <Button
         android:text="Save"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/button5" />
+        android:id="@+id/button5"
+        android:layout_margin="15dp"
+        android:padding="15dp"
+        android:textColor="#FFCF9043"
+        android:background="@android:color/background_light"/>
 
     <Button
         android:text="Clear"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/button9" />
+        android:id="@+id/button9"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:padding="15dp"
+        android:textColor="#FFCF9043"
+        android:background="@android:color/background_light"/>
 </LinearLayout>
