--- a/app/src/main/res/layout/activity_composer.xml
+++ b/app/src/main/res/layout/activity_composer.xml
@@ -11,36 +11,60 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     tools:context="com.example.asus.firstsimpleapp.Composer"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:background="@color/colorPrimary"
+    android:theme="@style/AppTheme">
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center"
         app:srcCompat="@mipmap/ic_launcher"
         android:id="@+id/imageView3"
         android:layout_weight="0.17" />
 
     <TextView
+        android:layout_marginTop="20dp"
         android:text="TextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView11"
+        android:textStyle="bold"
+        android:textSize="20dp"
+        android:textAlignment="center"
+        android:layout_gravity="center"
         android:layout_weight="0.01" />
 
     <TextView
         android:text="TextView"
+        android:layout_marginTop="30dp"
+        android:textSize="13dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView12" />
 
     <Button
         android:text="Edit"
+        android:textColor="#FFCF9043"
+        android:textSize="17dp"
+        android:layout_marginTop="35dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:padding="15dp"
+        android:background="@android:color/background_light"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/button6" />
 
     <Button
         android:text="Delete"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:textColor="#FFCF9043"
+        android:textSize="17dp"
+        android:layout_marginTop="15dp"
+        android:padding="15dp"
+        android:background="@android:color/background_light"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/button7" />
