--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -32,7 +32,7 @@
                 android:hint="Email Address"/>
         </android.support.design.widget.TextInputLayout>
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/text_input_layout2"
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:errorEnabled="true">
@@ -44,7 +44,7 @@
             android:hint="Username"/>
     </android.support.design.widget.TextInputLayout>
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/text_input_layout3"
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:errorEnabled="true">
@@ -64,7 +64,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/editText4"
-            android:inputType="textEmailAddress"
+            android:inputType="textPassword"
             android:hint="Confirm Password"/>
     </android.support.design.widget.TextInputLayout>
     <Button
