--- a/app/src/main/res/layout/fruit_row_layout.xml
+++ b/app/src/main/res/layout/fruit_row_layout.xml
@@ -6,39 +6,56 @@
     android:layout_height="wrap_content"
     android:weightSum="1">
 
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="-10dp"
+        app:srcCompat="@mipmap/ic_launcher"
+        android:id="@+id/imageView2"
+        android:layout_weight="0.14" />
+
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <TextView
-                android:text="TextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView8"
-                android:textStyle="bold"
-                android:textSize="18dp"/>
-
-            <TextView
-                android:text="TextView"
-                android:layout_width="250dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                android:id="@+id/textView9" />
-        </LinearLayout>
-
-        <ImageView
+        <TextView
+            android:id="@+id/textView11"
             android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginTop="-10dp"
-            app:srcCompat="@mipmap/ic_launcher"
-            android:id="@+id/imageView2"
-            android:layout_weight="0.14" />
+            android:layout_height="wrap_content"
+            android:text="Name: "
+            android:textColor="@android:color/background_dark" />
 
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textColor="@android:color/black"
+            android:textSize="18dp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/textView111"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text="Description: "
+            android:textColor="@android:color/black" />
+
+        <TextView
+            android:id="@+id/textView9"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textColor="@android:color/black"
+            android:textSize="18dp"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <TextView
