--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -2,99 +2,117 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:weightSum="1"
-    android:layout_marginTop="50dp"
-    android:background="@color/colorPrimary">
-
-<LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:layout_marginTop="10dp"
+    android:background="@android:color/background_light"
     android:orientation="vertical"
-    android:layout_marginTop="30dp">
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/text_input_layout"
+    android:weightSum="1">
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:errorEnabled="true">
-        <android.support.design.widget.TextInputEditText
-            android:layout_width="350dp"
-            android:layout_height="50dp"
-            android:id="@+id/editText"
-            android:inputType="textEmailAddress"
-            android:hint="Email Address"
-            android:background="@drawable/rounded_corner"
-            android:padding="15dp"
-            android:layout_gravity="center"/>
-    </android.support.design.widget.TextInputLayout>
-    <android.support.design.widget.TextInputLayout
+        android:layout_marginTop="10dp"
+        android:orientation="vertical">
 
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:errorEnabled="true">
-        <android.support.design.widget.TextInputEditText
-            android:layout_width="350dp"
-            android:layout_height="50dp"
-            android:id="@+id/editText2"
-            android:inputType="textPersonName"
-            android:hint="Username"
-            android:background="@drawable/rounded_corner"
-            android:padding="15dp"
-            android:layout_gravity="center"/>
-    </android.support.design.widget.TextInputLayout>
-    <android.support.design.widget.TextInputLayout
+        <TextView
+            android:layout_marginLeft="12dp"
+            android:text="Email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:errorEnabled="true">
-        <android.support.design.widget.TextInputEditText
-            android:layout_width="350dp"
-            android:layout_height="50dp"
-            android:id="@+id/editText3"
-            android:inputType="textPassword"
-            android:hint="Password"
-            android:background="@drawable/rounded_corner"
-            android:padding="15dp"
-            android:layout_gravity="center"/>
-    </android.support.design.widget.TextInputLayout>
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/text_input_layout4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:errorEnabled="true">
-        <android.support.design.widget.TextInputEditText
-            android:layout_width="350dp"
-            android:layout_height="50dp"
-            android:id="@+id/editText4"
-            android:inputType="textPassword"
-            android:hint="Confirm Password"
-            android:background="@drawable/rounded_corner"
-            android:padding="15dp"
-            android:layout_gravity="center"/>
-    </android.support.design.widget.TextInputLayout>
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/text_input_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:errorEnabled="true">
 
-    <Button
-        android:text="Register"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/button"
-        android:enabled="false"
-        android:textColor="#FFCF9043"
-        android:textSize="17dp"
-        android:layout_marginLeft="20dp"
-        android:background="@android:color/background_light"/>
+            <EditText
+                android:id="@+id/editText"
+                android:layout_width="350dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:inputType="textEmailAddress"
+                android:padding="15dp" />
+        </android.support.design.widget.TextInputLayout>
 
-    <Button
-        android:text="Clear"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/button8"
-        android:textColor="#FFCF9043"
-        android:textSize="17dp"
-        android:background="@android:color/background_light"
-        android:layout_marginLeft="200dp"
-        android:layout_marginTop="-50dp"/>
+        <TextView
+            android:layout_marginLeft="12dp"
+            android:text="Username"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <android.support.design.widget.TextInputLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:errorEnabled="true">
+
+            <EditText
+                android:id="@+id/editText2"
+                android:layout_width="350dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:inputType="textPersonName"
+                android:padding="15dp" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <TextView
+            android:layout_marginLeft="12dp"
+            android:text="Password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <android.support.design.widget.TextInputLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:errorEnabled="true">
+
+
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/editText3"
+                android:layout_width="350dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:inputType="textPassword"
+                android:padding="15dp" />
+        </android.support.design.widget.TextInputLayout>
+
+        <TextView
+            android:layout_marginLeft="12dp"
+            android:text="Confirm Password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/text_input_layout4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:errorEnabled="true">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/editText4"
+                android:layout_width="350dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:inputType="textPassword"
+                android:padding="15dp" />
+        </android.support.design.widget.TextInputLayout>
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:background="@android:color/background_light"
+            android:enabled="false"
+            android:text="Register"
+            android:textColor="#FFCF9043"
+            android:textSize="17dp" />
+
     </LinearLayout>
 
 </LinearLayout>
