--- a/app/src/main/res/layout/signin.xml
+++ b/app/src/main/res/layout/signin.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="50dp"
-    android:background="@color/colorPrimary">
+    android:background="@android:color/background_light"
+    android:orientation="vertical">
 
 
-    <ImageView
-        android:layout_width="700dp"
-        android:layout_height="200dp"
-        android:layout_gravity="center"
-        app:srcCompat="@drawable/logo"
-        android:id="@+id/imageView4" />
-
+    <TextView
+        android:layout_marginLeft="12dp"
+        android:text="Username"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -21,44 +20,47 @@
 
 
         <EditText
-            android:inputType="textPersonName"
             android:id="@+id/editText2"
-            android:hint="Username"
-            android:ems="10"
-            android:background="@drawable/rounded_corner"
-            android:padding="15dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp" />
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/rounded_corner"
-            android:padding="15dp"
             android:layout_margin="15dp"
             android:ems="10"
+            android:inputType="textPersonName"
+            android:padding="15dp" />
+
+    </LinearLayout>
+
+    <TextView
+        android:layout_marginLeft="12dp"
+        android:text="Password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <EditText
             android:id="@+id/editText3"
-            android:hint="Password"
-            android:inputType="textPassword" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:ems="10"
+            android:inputType="textPassword"
+            android:padding="15dp" />
     </LinearLayout>
 
     <Button
-        android:text="Sign In"
-        android:layout_gravity="center"
+        android:id="@+id/button2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="#FFCF9043"
-        android:textSize="17dp"
+        android:layout_gravity="center"
         android:layout_margin="15dp"
+        android:background="@android:color/background_light"
         android:padding="15dp"
-        android:id="@+id/button2"
-        android:background="@android:color/background_light" />
+        android:text="Login Now"
+        android:textColor="#FFCF9043"
+        android:textSize="17dp" />
 
 </LinearLayout>
