--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#658525</color>
-    <color name="colorPrimaryDark">#658525</color>
-    <color name="colorAccent">#cfee91</color>
-</resources>
+    <color name="colorPrimary">#6AA0F7</color>
+    <color name="colorPrimaryDark">#5A8EE2</color>
+<color name="colorAccent">#2a497a</color>
+    </resources>
