--- a/app/src/main/res/layout/activity_composer.xml
+++ b/app/src/main/res/layout/activity_composer.xml
@@ -15,6 +15,7 @@
     android:theme="@style/AppTheme">
 
     <ImageView
+        android:visibility="gone"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_gravity="center"
@@ -63,23 +64,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <Button
-            android:text="Edit"
-            android:textColor="#FFCF9043"
-            android:textSize="17dp"
-            android:background="@android:color/background_light"
+            android:layout_marginLeft="10dp"
+            android:id="@+id/button6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/button6" />
+            android:background="@color/colorAccent"
+            android:padding="15dp"
+            android:text="Edit"
+            android:textColor="@android:color/background_light"
+            android:textSize="12dp" />
 
         <Button
-            android:text="Delete"
             android:layout_marginLeft="10dp"
-            android:textColor="#FFCF9043"
-            android:textSize="17dp"
-            android:background="@android:color/background_light"
+            android:id="@+id/button7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/button7" />
+            android:background="@color/colorAccent"
+            android:padding="15dp"
+            android:text="Delete"
+            android:textColor="@android:color/background_light"
+            android:textSize="12dp" />
     </LinearLayout>
 
 </LinearLayout>
