--- a/app/src/main/res/layout/activity_food_dashboard.xml
+++ b/app/src/main/res/layout/activity_food_dashboard.xml
@@ -4,7 +4,6 @@
     android:id="@+id/activity_food_dashboard"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorAccent"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -15,15 +14,16 @@
 
     <Button
         android:id="@+id/button3"
-        style="@style/Widget.AppCompat.Button"
-        android:layout_width="150dp"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:text="Add Item"
-        android:textColor="#FFCF9043"
-        android:textSize="17dp" />
+        android:background="@color/colorAccent"
+        android:padding="15dp"
+        android:text="Add Memo"
+        android:textColor="@android:color/background_light"
+        android:textSize="12dp" />
 
     <GridView
+        android:layout_marginTop="20dp"
         android:id="@+id/fruitlist"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
