--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -9,24 +9,27 @@
     android:orientation="vertical"
     android:weightSum="1">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="200dp"
+        app:srcCompat="@drawable/memo" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:orientation="vertical">
-
-        <TextView
-            android:layout_marginLeft="12dp"
-            android:text="Email"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/text_input_layout"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:errorEnabled="true">
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
 
+            <TextView
+                android:layout_marginLeft="12dp"
+                android:text="Email Address: "
+                android:layout_width="100dp"
+                android:layout_height="wrap_content" />
             <EditText
                 android:id="@+id/editText"
                 android:layout_width="350dp"
@@ -34,19 +37,31 @@
                 android:layout_gravity="center"
                 android:inputType="textEmailAddress"
                 android:padding="15dp" />
-        </android.support.design.widget.TextInputLayout>
+        </LinearLayout>
+        <!--<android.support.design.widget.TextInputLayout-->
+            <!--android:id="@+id/text_input_layout"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--app:errorEnabled="true">-->
 
-        <TextView
-            android:layout_marginLeft="12dp"
-            android:text="Username"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
 
-        <android.support.design.widget.TextInputLayout
-
+        <!--</android.support.design.widget.TextInputLayout>-->
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:errorEnabled="true">
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_marginLeft="12dp"
+                android:text="Full Name: "
+                android:layout_width="100dp"
+                android:layout_height="wrap_content" />
+
+        <!--<android.support.design.widget.TextInputLayout-->
+
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--app:errorEnabled="true">-->
 
             <EditText
                 android:id="@+id/editText2"
@@ -56,62 +71,86 @@
                 android:inputType="textPersonName"
                 android:padding="15dp" />
 
-        </android.support.design.widget.TextInputLayout>
+        <!--</android.support.design.widget.TextInputLayout>-->
+        </LinearLayout>
 
-        <TextView
-            android:layout_marginLeft="12dp"
-            android:text="Password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <android.support.design.widget.TextInputLayout
-
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:errorEnabled="true">
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_marginLeft="12dp"
+                android:text="Password"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content" />
+
+        <!--<android.support.design.widget.TextInputLayout-->
+
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--app:errorEnabled="true">-->
 
 
 
-            <android.support.design.widget.TextInputEditText
+            <!--<android.support.design.widget.TextInputEditText-->
+                <!--android:id="@+id/editText3"-->
+                <!--android:layout_width="350dp"-->
+                <!--android:layout_height="50dp"-->
+                <!--android:layout_gravity="center"-->
+                <!--android:inputType="textPassword"-->
+                <!--android:padding="15dp" />-->
+        <!--</android.support.design.widget.TextInputLayout>-->
+            <EditText
                 android:id="@+id/editText3"
                 android:layout_width="350dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
                 android:inputType="textPassword"
                 android:padding="15dp" />
-        </android.support.design.widget.TextInputLayout>
-
-        <TextView
-            android:layout_marginLeft="12dp"
-            android:text="Confirm Password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/text_input_layout4"
+        </LinearLayout>
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:errorEnabled="true">
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_marginLeft="12dp"
+                android:text="Confirm Password"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content" />
 
-            <android.support.design.widget.TextInputEditText
+        <!--<android.support.design.widget.TextInputLayout-->
+            <!--android:id="@+id/text_input_layout4"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--app:errorEnabled="true">-->
+
+            <!--<android.support.design.widget.TextInputEditText-->
+                <!--android:id="@+id/editText4"-->
+                <!--android:layout_width="350dp"-->
+                <!--android:layout_height="50dp"-->
+                <!--android:layout_gravity="center"-->
+                <!--android:inputType="textPassword"-->
+                <!--android:padding="15dp" />-->
+        <!--</android.support.design.widget.TextInputLayout>-->
+            <EditText
                 android:id="@+id/editText4"
                 android:layout_width="350dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
                 android:inputType="textPassword"
                 android:padding="15dp" />
-        </android.support.design.widget.TextInputLayout>
-
+        </LinearLayout>
         <Button
             android:id="@+id/button"
-            android:layout_width="150dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:background="@android:color/background_light"
-            android:enabled="false"
-            android:text="Register"
-            android:textColor="#FFCF9043"
-            android:textSize="17dp" />
+            android:background="@color/colorAccent"
+            android:padding="15dp"
+            android:text="Register Now"
+            android:textColor="@android:color/background_light"
+            android:textSize="12dp" />
 
     </LinearLayout>
 
